# lnclite

./: .gitignore  404.html  AGENTS.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api-reference/: index.html
docs/: api-reference.md  index.md  installation.md  release.md
docs/usage/: basic.md  bulk-ingestion.md  indexing.md  ingest-directory.md  manager.md  (+1 more)
examples/: README.md  basic_semantic_search.py  directory_ingest.py  manage_multiple_stores.py  open_dataset_search.py  tagged_search_and_listing.py
installation/: index.html
lnclite/: __init__.py  client.py  config.py  constants.py  documents.py  embeddings.py  file_ingestor.py  filters.py  indexing.py  manager.py  manifest.py  models.py
release/: index.html
scripts/: dumps_works.py
search/: search_index.json
tests/: conftest.py  test_documents_batch_insert_embedded_concurrent.py  test_documents_batch_insert_embedded_count_mismatch.py  test_documents_batch_insert_embedded_dimension_mismatch.py  test_documents_batch_insert_embedded_normalizes.py  test_documents_batch_insert_embedded_skip_normalization.py  test_documents_batch_insert_embedded_timing_logs.py  test_documents_batch_insert_returns_count.py  test_documents_list_tags_all.py  test_documents_list_tags_any.py  test_examples_imports.py  test_index_plan.py  test_lifecycle.py  test_manager.py  test_new_from_dir_path_tags.py  test_public_api.py  test_search_tags_all.py  test_search_tags_any.py  test_utils_imports.py  test_vector_return.py
(+13 files in other folders)
