[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = [
  "diskcache",
  "lancedb",
  "numpy",
  "openai",
  "openai-embeddings-model",
  "paginatic",
  "pydantic (>=2)",
  "tiktoken",
  "xxhash",
]
description = "Lite usages of lancedb."
license = "MIT"
license-files = ["LICENSE"]
name = "lnclite"
readme = "README.md"
requires-python = ">=3.11,<4"
version = "0.2.1"

[project.urls]
Homepage = "https://github.com/allen2c/lnclite"
"PyPI" = "https://pypi.org/project/lnclite/"
Repository = "https://github.com/allen2c/lnclite"

[tool.poetry]
packages = [{ include = "lnclite" }]

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "*" }
isort = "*"
lines-of-work = { git = "https://github.com/allen2c/lines-of-work.git" }
logging-bullet-train = ">=0.4.0"
mkdocs-material = "*"
poetry-plugin-export = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
rich = "*"
rich-color-support = "*"
setuptools = "*"
twine = "*"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py311"]

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[tool.pytest.ini_options]
env = ["ENVIRONMENT=test", "PYTEST_IS_RUNNING=true"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
